# apple-translate-rs-sync

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs
src/: EngineHelper.m  TranslationWrapper.swift  config.rs  ffi.rs  lib.rs  translation-worker.m  worker_pool.rs
tests/: integration_test.rs
