[package]
name = "apple-translate-rs-sync"
version = "0.0.1"
edition = "2024"
description = "Synchronous Rust bindings for Apple's on-device Translation framework"
repository = "https://github.com/joshuarli/apple-translate-rs-sync"
readme = "README.md"
license = "MIT"
keywords = ["apple", "translation", "macos", "swift"]
categories = ["api-bindings", "os::macos-apis"]
include = [
    "Cargo.toml",
    "README.md",
    "build.rs",
    "rust-toolchain.toml",
    "src/**/*.rs",
    "src/**/*.swift",
    "src/**/*.m",
    "tests/**/*.rs",
]

[[bin]]
name = "translate-cli"
path = "src/bin/translate-cli.rs"

[[bin]]
name = "stress"
path = "src/bin/stress.rs"

[dependencies]
swift-bridge = "0.1.59"

[build-dependencies]
swift-bridge-build = "0.1.59"
